--- a/lab/src/main/resources/application.properties
+++ b/lab/src/main/resources/application.properties
@@ -1,2 +1,14 @@
 server.port=9090
 spring-boot=run
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+
+spring.datasource.url=jdbc:mysql://localhost:3306/pizzadelivery?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC&verifyServerCertificate=false
+spring.datasource.username=root
+spring.datasource.password=St1F2s3
+
+spring.jpa.show-sql=true
+
+spring.jpa.hibernate.ddl-auto=update
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
